--- a/Amusement Park Pass Generator/Base.lproj/Main.storyboard
+++ b/Amusement Park Pass Generator/Base.lproj/Main.storyboard
@@ -44,6 +44,9 @@
                                                 <state key="normal" title="Employee">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="onPressEntrantButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gQL-eN-uRe"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4qW-jU-sTg" userLabel="managerEntrantButton">
                                                 <rect key="frame" x="384" y="0.0" width="192" height="102.5"/>
@@ -473,6 +476,7 @@
                     <connections>
                         <outlet property="dateOfBirthField" destination="EO0-1g-AwV" id="LpW-sl-NhZ"/>
                         <outlet property="employeeEntrantButton" destination="LCB-F8-RU5" id="uez-Wf-wSu"/>
+                        <outlet property="fifthSubEntrantButton" destination="0DX-1l-BkG" id="oKT-pb-BTH"/>
                         <outlet property="guestEntrantButton" destination="edV-sw-gMN" id="N2G-8H-eXe"/>
                         <outlet property="managerEntrantButton" destination="4qW-jU-sTg" id="i80-xG-JMq"/>
                         <outlet property="projectField" destination="fiO-W3-qMe" id="yr4-y8-SOt"/>
